added power operator to the calculator

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <div class="calculator-buttons">
             <button data-symbol="clear">AC</button>
-            <button><!--+/--></button>
-            <button><!--%--></button>
+            <button data-symbol="^">^</button>
+            <!-- <button>√</button> -->
             <button data-symbol="/">÷</button>
 
             <button data-symbol="7">7</button>
