--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="calculator-buttons">
             <button data-symbol="clear">AC</button>
             <button data-symbol="^">^</button>
-            <!-- <button>√</button> -->
+            <button></button>
             <button data-symbol="/">÷</button>
 
             <button data-symbol="7">7</button>
